completed proofreading, made minor changes, ready for submission

--- a/Sidharth_Shanmugam_MEng_Final_Report.tex
+++ b/Sidharth_Shanmugam_MEng_Final_Report.tex
@@ -116,9 +116,7 @@
 
 \section*{Acknowledgements}
 \input{sections/03_acknowledgements.tex}
-
-\pagebreak
-
+\vfill
 \section*{Ethical Statement}
 \input{sections/01_ethical-statement.tex}
 
