--- a/appendices/00_bubble-backscatter-simulator.tex
+++ b/appendices/00_bubble-backscatter-simulator.tex
@@ -91,4 +91,4 @@
 
 \subsection{Python Code}
 \label{sim_code}
-\lstinputlisting[language=Python, caption={The Python code for the Bubble Backscatter Simulator, commit version: \texttt{34b9a82} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/bubble-backscatter-simulator/blob/main/app.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/bubble-backscatter-simulator/blob/main/app.py}}]{code/00_bubble-backscatter-simulator/app.py}
+\lstinputlisting[language=Python, caption={The Python code for the Bubble Backscatter Simulator, commit version: \texttt{34b9a82} from \cite{sidharthshanmugamBubblebackscattersimulator2024}.}]{code/00_bubble-backscatter-simulator/app.py}
