--- a/appendices/01_picam-recorder.tex
+++ b/appendices/01_picam-recorder.tex
@@ -139,20 +139,20 @@
 \label{rec_code}
 \subsubsection{Entry Point: `app.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for the `app.py' entry point to the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/app.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/app.py}}]{code/01_picam-recorder/app.py}
+\lstinputlisting[language=Python, caption={The Python code for the `app.py' entry point to the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \cite{sidharthshanmugamPicamvideorecorder2024}.}]{code/01_picam-recorder/app.py}
 
 
 \subsubsection{ProjectorManger: `ProjectorManager.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for `ProjectorManager.py' in the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/ProjectorManager.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/ProjectorManager.py}}]{code/01_picam-recorder/ProjectorManager.py}
+\lstinputlisting[language=Python, caption={The Python code for `ProjectorManager.py' in the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \cite{sidharthshanmugamPicamvideorecorder2024}.}]{code/01_picam-recorder/ProjectorManager.py}
 
 
 \subsubsection{CameraManager: `CameraManager.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for `CameraManager.py' in the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/CameraManager.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/CameraManager.py}}]{code/01_picam-recorder/CameraManager.py}
+\lstinputlisting[language=Python, caption={The Python code for `CameraManager.py' in the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \cite{sidharthshanmugamPicamvideorecorder2024}.}]{code/01_picam-recorder/CameraManager.py}
 
 
 \subsubsection{PreviewManager: `PreviewManager.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for `PreviewManager.py' in the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/PreviewManager.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder/blob/main/PreviewManager.py}}]{code/01_picam-recorder/PreviewManager.py}
+\lstinputlisting[language=Python, caption={The Python code for `PreviewManager.py' in the Lossless Raspberry Pi Camera Recorder, commit version: \texttt{30efb5a} from \cite{sidharthshanmugamPicamvideorecorder2024}.}]{code/01_picam-recorder/PreviewManager.py}
 
