--- a/appendices/02_system.tex
+++ b/appendices/02_system.tex
@@ -27,20 +27,20 @@
 \label{sys_code}
 \subsubsection{Entry Point: `app.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for the `app.py' entry point to the Backscatter Cancellation System program, commit version: \texttt{46b962a} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/app.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/app.py}}]{code/02_system/app.py}
+\lstinputlisting[language=Python, caption={The Python code for the `app.py' entry point to the Backscatter Cancellation System program, commit version: \texttt{46b962a} from \cite{sidharthshanmugamBackscattercancellationsystem2024}.}]{code/02_system/app.py}
 
 \subsubsection{CaptureManager: `CaptureManager.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for `CaptureManager.py' in the Backscatter Cancellation System program, commit version: \texttt{1bf8131} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/CaptureManager.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/CaptureManager.py}}]{code/02_system/CaptureManager.py}
+\lstinputlisting[language=Python, caption={The Python code for `CaptureManager.py' in the Backscatter Cancellation System program, commit version: \texttt{1bf8131} from \cite{sidharthshanmugamBackscattercancellationsystem2024}.}]{code/02_system/CaptureManager.py}
 
 \subsubsection{BSManager: `BSManager.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for `BSManager.py' in the Backscatter Cancellation System program, commit version: \texttt{46b962a} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/BSManager.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/BSManager.py}}]{code/02_system/BSManager.py}
+\lstinputlisting[language=Python, caption={The Python code for `BSManager.py' in the Backscatter Cancellation System program, commit version: \texttt{46b962a} from \cite{sidharthshanmugamBackscattercancellationsystem2024}.}]{code/02_system/BSManager.py}
 
 \subsubsection{TimeManager: `TimeManager.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for `TimeManager.py' in the Backscatter Cancellation System program, commit version: \texttt{2367e84} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/TimeManager.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/TimeManager.py}}]{code/02_system/TimeManager.py}
+\lstinputlisting[language=Python, caption={The Python code for `TimeManager.py' in the Backscatter Cancellation System program, commit version: \texttt{2367e84} from \cite{sidharthshanmugamBackscattercancellationsystem2024}.}]{code/02_system/TimeManager.py}
 
 \subsubsection{WindowManager: `WindowManager.py'}
 
-\lstinputlisting[language=Python, caption={The Python code for `WindowManager.py' in the Backscatter Cancellation System program, commit version: \texttt{407ac01} from \href{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/WindowManager.py}{https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/blob/main/WindowManager.py}}]{code/02_system/WindowManager.py}
+\lstinputlisting[language=Python, caption={The Python code for `WindowManager.py' in the Backscatter Cancellation System program, commit version: \texttt{407ac01} from \cite{sidharthshanmugamBackscattercancellationsystem2024}.}]{code/02_system/WindowManager.py}
