--- a/references.bib
+++ b/references.bib
@@ -226,6 +226,46 @@
   file = {/Users/sid/Zotero/storage/VWJ2WIKM/zero-parameter-automatic-canny-edge-detection-with-python-and-opencv.html}
 }
 
+@misc{sidharthshanmugamBackscattercancellationsystem2024,
+  title = {Backscatter-Cancellation-System},
+  shorttitle = {Sidharth-{{Shanmugam-MEng-Project-2023-24}}},
+  author = {{Sidharth Shanmugam}},
+  year = {2024},
+  month = may,
+  journal = {GitHub},
+  url = {https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system},
+  urldate = {2024-05-19},
+  langid = {english},
+  file = {/Users/sid/Zotero/storage/CPTDGN74/main.html}
+}
+
+@misc{sidharthshanmugamBackscattercancellationsystemMultiprocessing2024,
+  title = {Backscatter-Cancellation-System at Multiprocessing},
+  shorttitle = {Sidharth-{{Shanmugam-MEng-Project-2023-24}}},
+  author = {{Sidharth Shanmugam}},
+  year = {2024},
+  month = apr,
+  journal = {GitHub},
+  url = {https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/backscatter-cancellation-system/tree/multiprocessing},
+  urldate = {2024-05-19},
+  langid = {english},
+  file = {/Users/sid/Zotero/storage/M52SDKCZ/multiprocessing.html}
+}
+
+@misc{sidharthshanmugamBubblebackscattersimulator2024,
+  title = {Bubble-Backscatter-Simulator},
+  shorttitle = {Sidharth-{{Shanmugam-MEng-Project-2023-24}}/Bubble-Backscatter-Simulator},
+  author = {{Sidharth Shanmugam}},
+  year = {2024},
+  month = apr,
+  journal = {GitHub},
+  url = {https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/bubble-backscatter-simulator},
+  urldate = {2024-05-19},
+  abstract = {A Python script to generate bubble-based backscatter particles for virtually simulated testing and quantification.},
+  langid = {english},
+  file = {/Users/sid/Zotero/storage/E95C6322/main.html}
+}
+
 @techreport{sidharthshanmugamInitialReportMachine2024,
   title = {Initial {{Report}}: {{Machine Vision-Based Anti-Backscatter Lighting System}} for {{Unmanned Underwater Vehicles}}},
   author = {{Sidharth Shanmugam}},
@@ -235,6 +275,20 @@
   institution = {University of York},
   urldate = {2024-04-30},
   langid = {british}
+}
+
+@misc{sidharthshanmugamPicamvideorecorder2024,
+  title = {Picam-Video-Recorder},
+  shorttitle = {Sidharth-{{Shanmugam-MEng-Project-2023-24}}/Picam-Video-Recorder},
+  author = {{Sidharth Shanmugam}},
+  year = {2024},
+  month = apr,
+  journal = {GitHub},
+  url = {https://github.com/Sidharth-Shanmugam-MEng-Project-2023-24/picam-video-recorder},
+  urldate = {2024-05-19},
+  abstract = {Python script to record video from a Raspberry Pi Camera stream to a file, simultaneously driving a projector light source using the Framebuffer.},
+  langid = {english},
+  file = {/Users/sid/Zotero/storage/BF4XMSS5/main.html}
 }
 
 @incollection{tamburoProgrammableAutomotiveHeadlights2014,
