--- a/sections/08_testing.tex
+++ b/sections/08_testing.tex
@@ -24,7 +24,7 @@ The bubble backscatter simulator program works very well as a simple backscatter
 \end{figure}
 
 \subsection{Lossless Video Recorder}
-The lossless video recorder proved an invaluable tool that performed almost flawlessly, as Figure \ref{fig:rec_validate} illustrates. A change I had to make was to modify the OS to ensure the console would not output to the HDMI Framebuffer, as this was causing interference with my Framebuffer-driven light source. Unfortunately, as the figure also illustrates, there was a major misalignment issue, where the camera is only able to a small corner in the bottom-left of the projector-lit scene. While a simple cropping function can resolve most of this, which I have implemented in the backscatter cancellation system, albeit reducing the system's useable region, the system will still be affected by the camera's internal reflection, which reduces the field of view and adds distortion. Nevertheless, the recordings were very helpful in verifying the system in a non-synthetic environment without requiring re-deployment underwater.
+The lossless video recorder proved an invaluable tool that performed almost flawlessly, as Figure \ref{fig:rec_validate} illustrates. A change I had to make was to modify the OS to ensure the console would not output to the HDMI Framebuffer, as this was causing interference with my Framebuffer-driven light source. Unfortunately, as the figure also illustrates, there was a major misalignment issue, where the camera is only able to a small corner in the bottom-left of the projector-lit scene. While a simple cropping function can resolve most of this, which I have implemented in the backscatter cancellation system, albeit reducing the system's useable region, the system will still be affected by the camera's internal reflection, which reduces the field of view and adds distortion. Nevertheless, the recordings were very helpful in validating the system in a non-synthetic environment without requiring re-deployment underwater.
 
 \begin{figure}[H]
     \centering
@@ -56,11 +56,11 @@ The lossless video recorder proved an invaluable tool that performed almost flaw
 \end{figure}
 
 \subsection{Backscatter Cancellation System}
-I first verified the backscatter cancellation system using the output from the backscatter simulation and it worked flawlessly, identifying and segmenting the bubbles correctly using the minimum enclosing circle logic, as Figure \ref{fig:sys_sim} illustrates. However, when using the underwater test footage, the system started to incorrectly detect the background, mainly the textured padding of the testing tank, as Figure \ref{fig:sys_histequ} illustrates. I identified that this was caused by the histogram equalisation stage, where the entire image frame's pixel intensities are spread, increasing the contrast substantially. I therefore replaced this stage with an OpenCV binary thresholding implementation, ensuring that the system only passes certain pixel intensities. The results after this processing pipeline stage replacement were much better, as Figure \ref{fig:sys_binth} illustrates. Figure \ref{fig:sys_flow_visual} illustrates the final system's image processing pipeline flow.
+I first verified the backscatter cancellation system using the output from the backscatter simulation and it worked flawlessly, identifying and segmenting the bubbles correctly using the minimum enclosing circle logic, as Figure \ref{fig:sys_sim} illustrates. However, when using the underwater test footage, the system started to incorrectly detect the background, mainly the textured padding of the testing tank, as Figure \ref{fig:sys_histequ} illustrates. This was caused by the histogram equalisation stage as it increases the image frame's contrast substantially. I therefore replaced this stage with an OpenCV binary thresholding implementation, ensuring the system only passes certain pixel intensities. The results after this processing pipeline stage replacement were much better, as Figure \ref{fig:sys_binth} illustrates. Figure \ref{fig:sys_flow_visual} illustrates the final system's image processing pipeline flow.
 
 \begin{figure}[H]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.43\textwidth}
         \centering
         \includegraphics[width=1\linewidth]{assets/sys_sim.png}
         \caption{}
@@ -80,7 +80,7 @@ I first verified the backscatter cancellation system using the output from the b
         \caption{}
         \label{fig:sys_binth}
     \end{subfigure}
-    \caption{Screenshots validating the Backscatter Cancellation System program: (\ref{sub@fig:sys_sim}) showing the backscatter segmentation (red circles) from the Backscatter Simulator output, (\ref{sub@fig:sys_histequ}) incorrect segmentation of backscatter from the test footage, and (\ref{sub@fig:sys_binth}), which shows the correct backscatter segmentation using the same footage.}
+    \caption{Backscatter Cancellation System program output: (\ref{sub@fig:sys_sim}) showing the backscatter segmentation (red circles) from the Backscatter Simulator, (\ref{sub@fig:sys_histequ}) incorrect segmentation with histogram equalisation, and (\ref{sub@fig:sys_binth}), correct segmentation with binary thresholding.}
     \label{fig:sys_validate}
 \end{figure}
 
@@ -136,7 +136,7 @@ I first verified the backscatter cancellation system using the output from the b
         \caption{}
         \label{fig:sys_projection}
     \end{subfigure}
-    \caption{Screenshots previewing the image processing pipeline stages of the Cancellation System program, in order from left to right: (\ref{sub@fig:sys_input}) the input, (\ref{sub@fig:sys_gs}) greyscale filtering, (\ref{sub@fig:sys_gb}) Gaussian blur, (\ref{sub@fig:sys_thresh}) binary thresholding, (\ref{sub@fig:sys_canny}) the Canny algorithm, (\ref{sub@fig:sys_segment}) segmentation with minimum enclosing circles, finally, (\ref{sub@fig:sys_projection}), the projection.}
+    \caption{Backscatter Cancellation System program debug output: (\ref{sub@fig:sys_input}) the input, (\ref{sub@fig:sys_gs}) greyscale filtering, (\ref{sub@fig:sys_gb}) Gaussian blur, (\ref{sub@fig:sys_thresh}) binary thresholding, (\ref{sub@fig:sys_canny}) the Canny algorithm, (\ref{sub@fig:sys_segment}) segmentation with minimum enclosing circles, finally, (\ref{sub@fig:sys_projection}), the projection.}
     \label{fig:sys_flow_visual}
 \end{figure}
 
@@ -175,8 +175,6 @@ Due to time constraints, I couldn't implement logic in the backscatter cancellat
     \label{table:sys_std_sp_metrics}
 \end{table}
 
-Table \ref{table:sys_std_sp_metrics} transcribes the real-time metrics for the system, across 402 frames of real test footage recorded from the testing tank, listing the execution duration for all the image processing pipeline stages using the standard kernel, real-time kernel, multiprocessing, and in the standard single core mode under the GIL. The data shows a 431\% increase in total latency from the single-core to the multi-core program with the standard kernel, and 37\& increase of that in the real-time kernel, a 729\% increase when moving from the standard to the real-time kernel with single-core, and a 114\% increase when moving from that in the multiprocessing system. The data also contains the standard deviation of the individual processing stage and total system latencies to measure data variability, showing a 199\% increase in fluctuations when moving from the standard to real-time kernel in the single-code environment, and a 21\% decrease of that in the multiprocessing environment.
+Table \ref{table:sys_std_sp_metrics} transcribes the real-time metrics for the system, across 402 frames of real test footage recorded from the testing tank, listing the execution duration for all the image processing pipeline stages using the standard kernel, real-time kernel, multiprocessing, and in the standard single-core mode under the GIL. The data shows a 431\% increase in total latency from the single-core to the multi-core program with the standard kernel, and 37\% increase of that in the real-time kernel, a 729\% increase when moving from the standard to the real-time kernel with single-core, and a 114\% increase when moving from that in the multiprocessing system. The data also contains the standard deviation of the individual processing stage and total system latencies to measure data variability, showing a 199\% increase in fluctuations when moving from the standard to real-time kernel in the single-code environment, and a 21\% decrease of that in the multiprocessing environment.
 
-In contrast to the theory that previous sections cover regarding the reduction of latency with multiprocessing and a real-time OS, the data illustrates the complete opposite. The multiprocessing system employs queues, a form of Inter-Process Communication (IPC), to preserve data whilst processing asynchronously across multiple processes. These IPCs introduce vast computational overhead due to data serialisation and deserialisation when transmitting across processes and during OS context switching. Furthermore, while multiprocessing offers parallelism, it still cannot overcome the synchronous nature of I/O-bound processes, as the data quantifies showing a 719\% increase in frame capture durations between the standard single-core and standard multiprocessing systems. The PREEMPT-RT patch should've reduced system latency or at least resulted in more constant latency measurements. However, the data illustrates the patch increasing the frequency of preemption points in the kernel, resulting in more context switches, and when paired with the IPCs, slowing down the system rate and increasing latency.
-
-To conclude, my single-core RPi SBC system achieves a total processing latency of just \SI{2.6}{\milli\second}, a great improvement from the system in De Charette et al., which takes \SI{4.1}{\milli\second} to process frames on a much more powerful desktop computer, and achieving the \SI{33.33}{\milli\second} (30FPS) target.
+In contrast to the theory that previous sections cover regarding the reduction of latency with multiprocessing and a real-time OS, the data illustrates the complete opposite. The multiprocessing system employs queues, a form of Inter-Process Communication (IPC), to preserve data whilst processing asynchronously across multiple processes. These IPCs introduce vast computational overhead due to data serialisation and deserialisation when transmitting across processes and during OS context switching. Furthermore, while multiprocessing offers parallelism, it still cannot overcome the synchronous nature of I/O-bound processes, as the data quantifies with a 719\% increase in frame capture durations between the standard single-core and standard multiprocessing systems. The PREEMPT-RT patch should've reduced system latency or at least resulted in more constant latency measurements. However, the data illustrates the patch increasing the frequency of preemption points in the kernel, resulting in more context switches, and when paired with the IPCs, slowing down the system rate and increasing latency. Nevertheless, my single-core RPi SBC system achieves a total processing latency of just \SI{2.6}{\milli\second}, a great improvement from the system in De Charette et al., which takes \SI{4.1}{\milli\second} to process frames on a much more powerful desktop computer, and achieving the \SI{33.33}{\milli\second} (30FPS) target.
